[tool.poetry]
name = "esdb"
version = "0.3.1"
description = "gRPC client for EventStore DB"
authors = ["Andrii Kohut <kogut.andriy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andriykohut/esdb-py"
repository = "https://github.com/andriykohut/esdb-py"
keywords = ["eventstore", "esdb", "event sourcing", "cqrs", "event-sourcing", "grpcio", "grpc"]

packages = [
    { include = "esdb" },
]

exclude = ["EventStore", "certs", "es_config", "protos"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
grpcio = "^1.50.0"
protobuf = "^4.21.8"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
mypy-protobuf = "^3.4.0"
black = "^22.10.0"
pytest = "^7.2.0"
isort = "^5.10.1"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"
grpcio-tools = "^1.50.0"
grpc-stubs = "^1.24.11"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["esdb/generated"]

[tool.black]
line-length = 119
exclude = "esdb/generated"

[tool.isort]
profile = "black"
skip_glob = "esdb/generated/*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*grpc.aio._channel:287",
    "ignore:::.*grpc.aio._channel:288",
]

[tool.coverage.run]
branch = true
omit = ["esdb/generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
]
