[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.2.0",
    "mypy-protobuf>=3.4.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
    "isort>=5.12.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
    "grpcio-tools>=1.54.0",
    "grpc-stubs>=1.53.0.1",
    "pytest-cov>=4.0.0",
]

[project]
name = "esdb-py"
version = "0.3.2"
description = "gRPC client for EventStore DB"
authors = [
    {name = "Andrii Kohut", email = "kogut.andriy@gmail.com"},
]
dependencies = [
    "grpcio>=1.5",
    "protobuf>=4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["eventstore", "esdb", "event sourcing", "cqrs", "event-sourcing", "grpcio", "grpc"]

[project.urls]
Homepage = "https://github.com/andriykohut/esdb-py"
Repository = "https://github.com/andriykohut/esdb-py"
Changelog = "https://github.com/andriykohut/esdb-py/releases"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
excludes = ["EventStore", "certs", "es_config", "protos", "./**/.git"]
package-dir = "."
includes = ["esdb"]
source-includes = ["tests", "LICENSE", "README.md"]

[tool.mypy]
exclude = ["esdb/generated"]

[tool.black]
line-length = 119
exclude = "esdb/generated|.venv"

[tool.isort]
profile = "black"
skip_glob = "esdb/generated/*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*grpc.aio._channel:287",
    "ignore:::.*grpc.aio._channel:288",
]

[tool.coverage.run]
branch = true
omit = ["esdb/generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
]
