[tool.poetry]
name = "esdb"
version = "0.3.5"
description = "gRPC client for EventStore DB"
authors = ["Andrii Kohut <kogut.andriy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andriykohut/esdb-py"
repository = "https://github.com/andriykohut/esdb-py"
keywords = ["eventstore", "esdb", "event sourcing", "cqrs", "event-sourcing", "grpcio", "grpc"]

packages = [
    { include = "esdb" },
]

exclude = ["EventStore", "certs", "es_config", "protos"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
grpcio = ">=1.4.0"
protobuf = ">=4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
mypy-protobuf = "^3.4.0"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"
grpcio-tools = "^1.54.2"
grpc-stubs = "^1.53.0.2"
pytest-cov = "^4.1.0"
ruff = ">=0.0.270,<0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["esdb/generated"]

[tool.black]
line-length = 119
exclude = "esdb/generated"

[tool.isort]
profile = "black"
skip_glob = "esdb/generated/*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*grpc.aio._channel:287",
    "ignore:::.*grpc.aio._channel:288",
]

[tool.coverage.run]
branch = true
omit = ["esdb/generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
]

[tool.ruff]
line-length = 119
exclude = ["esdb/generated/*"]
